--- a/login-page.html
+++ b/login-page.html
@@ -5,43 +5,40 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <title>Login page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Document</title>
 </head>
 <body class="bg-light">
-
-<div class="container" style="margin-top: 150px">
-    <div class="row vertical-offset-100">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please sign in</h3>
+<div class="container col-md-4" style="margin-top: 10rem">
+    <div class="border rounded">
+        <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Please Sign In</p>
+        <form class="p-3 bg-white" action="">
+            <fieldset class="pb-3">
+                <div class="form-group pb-3">
+                    <input type="email" class="form-control" id="email" placeholder="E-mail" size="50">
                 </div>
-                <div class="panel-body">
-                    <form action="edit-profile.html" accept-charset="UTF-8" role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="text" size="50">
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password">
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me"> Remember Me
-                                </label>
-                            </div>
-                            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
-                        </fieldset>
-                    </form>
+                <div class="form-group pb-3">
+                    <input type="password" class="form-control" id="password" placeholder="Password" size="50">
                 </div>
-            </div>
-        </div>
+                <div class="form-check pb-3">
+                    <input type="checkbox" class="form-check-input" id="remember-me" placeholder="Password" size="50">
+                    <label class="form-check-label" for="remember-me">Remember Me</label>
+                </div>
+                <button class="btn btn-primary w-100" type="submit">Login</button>
+            </fieldset>
+            <a href="register-page.html" class="text-decoration-none">Click here to Register</a>
+        </form>
     </div>
 </div>
 
-<script src="http://mymaplist.com/js/vendor/TweenLite.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+<script type="text/javascript">
+</script>
 </body>
 </html>
