--- a/edit-profile.html
+++ b/edit-profile.html
@@ -46,7 +46,7 @@
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-search"></i>
                 </button>
             </div>
-            <div class="mb-3 my-3 border-bottom pb-2">
+            <div id="view-contents" class="mb-3 my-3 border-bottom pb-2">
                 <a href="view-contents.html" class="text-decoration-none ">
                     <i class="fas fa-calendar-alt"></i> View contents
                 </a>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="col-lg-10 p-3">
+        <div id="edit-profile" class="col-lg-10 p-3">
             <h2 class="p-3 border-bottom" style="margin-bottom: 0.5em">Edit profile</h2>
             <div class="border">
                 <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Profile Form Elements</p>
@@ -79,8 +79,8 @@
                                value="your_email@example.com" size="50">
                     </div>
                     <div class="pb-2">
-                        <label for="phone_number" class="form-label fw-bold">Phone</label>
-                        <input type="email" class="form-control" id="phone_number"
+                        <label for="phone" class="form-label fw-bold">Phone</label>
+                        <input type="email" class="form-control" id="phone"
                                placeholder="Enter your phone number">
                     </div>
                     <div class="pb-3">
@@ -102,5 +102,42 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+<script>
+    const link = document.querySelectorAll('#view-contents a')
+
+    window.onload = function () {
+        let storedUser = localStorage.getItem('currentUser')
+        console.log(storedUser)
+        document.querySelector('#staticEmail').value = storedUser
+        let registrationData = JSON.parse(localStorage.getItem('registrationData')).filter(item => item.staticEmail === storedUser)
+        if (registrationData[0].first-name) {
+            document.querySelector('#first-name').value = registrationData[0].first-name
+            document.querySelector('#last-name').value = registrationData[0].last-name
+            document.querySelector('#phone').value = registrationData[0].phone
+            document.querySelector('#description').value = registrationData[0].description
+        }
+    }
+
+    link.forEach(link => {
+        link.addEventListener('click', async (event) => {
+            event.preventDefault();
+
+            // Show loading message
+            const loadingMessage = document.createElement('div');
+            loadingMessage.innerText = 'Loading...';
+            loadingMessage.classList.add('mt-5', 'fs-1');
+
+            // Remove all children of .form-content
+            const editProfile = document.querySelector('#edit-profile');
+            editProfile.innerHTML = loadingMessage.outerHTML;
+
+            // Use async/await to wait for 5 seconds
+            await new Promise(resolve => setTimeout(resolve, 5000));
+
+            // Navigate to the corresponding HTML page
+            window.location.href = link.getAttribute('href');
+        })
+    });
+</script>
 </body>
 </html>
