--- a/form-content.html
+++ b/form-content.html
@@ -21,13 +21,14 @@
         <div class="justify-content-between" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="edit-profile.html" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         <i class="fas fa-user"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> User Profile</a></li>
-                        <li><a class="dropdown-item" href="login-page.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                        <li><a class="dropdown-item" href="edit-profile.html"><i class="fas fa-user"></i> User Profile</a></li>
+                        <li><a class="dropdown-item" href="login-page.html"><i class="fas fa-sign-out-alt"></i>
+                            Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -37,7 +38,7 @@
 
 <div class="container-fluid bg-white">
     <div class="row">
-        <div class="col-lg-2 bg-light">
+        <div class="col-lg-2 bg-light vh-100">
             <div class="input-group pt-3 pb-3 border-bottom">
                 <input type="text" class="form-control" placeholder="Searching..." aria-label="Searching"
                        aria-describedby="button-addon2">
@@ -45,7 +46,7 @@
                         class="fas fa-search"></i>
                 </button>
             </div>
-            <div class="mb-3 my-3 border-bottom pb-2">
+            <div id="view-contents" class="mb-3 my-3 border-bottom pb-2">
                 <a href="view-contents.html" class="text-decoration-none ">
                     <i class="fas fa-calendar-alt"></i> View contents
                 </a>
@@ -57,14 +58,14 @@
             </div>
         </div>
 
-        <div class="col-lg-10 p-3">
+        <div class="col-lg-10 p-3" id="add-content">
             <h2 class="p-3 border-bottom" style="margin-bottom: 0.5em">Add content</h2>
             <div class="border">
                 <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Profile Form Elements</p>
                 <form class="p-3" action="">
                     <div class="pb-3">
-                        <label for="first-name" class="form-label fw-bold">Title</label>
-                        <input type="text" class="form-control" id="first-name" placeholder="Enter the title"
+                        <label for="title" class="form-label fw-bold">Title</label>
+                        <input type="text" class="form-control" id="title" placeholder="Enter the title"
                                size="50">
                     </div>
                     <div class="pb-3">
@@ -90,5 +91,50 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+<script>
+    const from = document.querySelector('form')
+    from.addEventListener('submit', (event) => {
+        event.preventDefault()
+
+        const dataContent = {
+            title: document.querySelector('#title').value,
+            brief: document.querySelector('#brief').value,
+            content: document.querySelector('#content').value,
+            create: new Date().toDateString('en-GB', {
+                day: '2-digit',
+                month: '2-digit',
+                year: 'numeric',
+                hour: '2-digit',
+                minute: '2-digit'
+            })
+        }
+        const currentUser = localStorage.getItem('currentUser')
+        const users = JSON.parse(localStorage.getItem('registrationData')) || []
+        const currentUserIndex = users.findIndex(user => user.email === currentUser)
+    })
+
+    const link = document.querySelectorAll('#view-contents a')
+
+    link.forEach(link => {
+        link.addEventListener('click', async (event) => {
+            event.preventDefault();
+
+            // Show loading message
+            const loadingMessage = document.createElement('div');
+            loadingMessage.innerText = 'Loading...';
+            loadingMessage.classList.add('mt-5', 'fs-1');
+
+            // Remove all children of .form-content
+            const addContent = document.querySelector('#add-content');
+            addContent.innerHTML = loadingMessage.outerHTML;
+
+            // Use async/await to wait for 5 seconds
+            await new Promise(resolve => setTimeout(resolve, 5000));
+
+            // Navigate to the corresponding HTML page
+            window.location.href = link.getAttribute('href');
+        })
+    });
+</script>
 </body>
 </html>
