--- a/login-page.html
+++ b/login-page.html
@@ -16,19 +16,19 @@
 <div class="container col-md-4" style="margin-top: 10rem">
     <div class="border rounded">
         <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Please Sign In</p>
-        <form class="p-3 bg-white" action="">
+        <form class="p-3 bg-white" action="" id="login-form">
             <fieldset class="pb-3">
                 <div class="form-group pb-3">
-                    <input type="email" class="form-control" id="email" placeholder="E-mail" size="50">
+                    <input type="email" class="form-control" id="email" placeholder="E-mail" size="50" required>
                 </div>
                 <div class="form-group pb-3">
-                    <input type="password" class="form-control" id="password" placeholder="Password" size="50">
+                    <input type="password" class="form-control" id="password" placeholder="Password" size="50" required>
                 </div>
                 <div class="form-check pb-3">
                     <input type="checkbox" class="form-check-input" id="remember-me" placeholder="Password" size="50">
                     <label class="form-check-label" for="remember-me">Remember Me</label>
                 </div>
-                <button class="btn btn-primary w-100" type="submit">Login</button>
+                <button class="btn btn-primary w-100 btn-success" type="submit">Login</button>
             </fieldset>
             <a href="register-page.html" class="text-decoration-none">Click here to Register</a>
         </form>
@@ -38,7 +38,37 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-<script type="text/javascript">
+<script>
+    const form = document.querySelector('#login-form')
+
+    form.addEventListener('submit', (event) => {
+        event.preventDefault()
+
+        const userData = {
+            email: document.querySelector('#email').value,
+            password: document.querySelector('#password').value,
+        }
+
+        let existingData = JSON.parse(localStorage.getItem('registrationData')) || []
+
+        const user = existingData.find((data) => data.email === userData.email && data.password === userData.password)
+
+        if (user) {
+            alert('Login successful')
+            clearForm()
+            localStorage.setItem('currentUser', userData.email)
+            window.location.href = 'edit-profile.html'
+            return
+        }
+
+        alert('User does not exist or password is incorrect');
+        clearForm()
+
+        function clearForm() {
+            document.querySelector('#email').value = '';
+            document.querySelector('#password').value = '';
+        }
+    })
 </script>
 </body>
 </html>
