--- a/register-page.html
+++ b/register-page.html
@@ -10,37 +10,90 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body class="bg-light">
 <div class="container col-md-4" style="margin-top: 10rem">
     <div class="border rounded">
-        <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Please Sign In</p>
-        <form class="p-3 bg-white" action="">
+        <p class="p-3 border-bottom bg-light" style="margin-bottom: 0">Register</p>
+        <form id="register" class="p-3 bg-white" action="">
             <fieldset class="pb-3">
                 <div class="form-group pb-3">
-                    <input type="text" class="form-control" id="user-name" placeholder="User name" size="50">
+                    <input type="text" id="username" class="form-control" name="user" placeholder="User name"
+                           size="50" minlength="3"
+                           maxlength="30" required>
                 </div>
                 <div class="form-group pb-3">
-                    <input type="email" class="form-control" id="email" placeholder="E-mail" size="50" required>
+                    <input type="email" id="email" class="form-control" name="email" placeholder="E-mail"
+                           size="50" required>
                 </div>
                 <div class="form-group pb-3">
-                    <input type="password" class="form-control" id="password" placeholder="Password" size="50" required>
+                    <input type="password" id="password" class="form-control" name="password"
+                           placeholder="Password" size="50" required>
                 </div>
                 <div class="form-group pb-3">
-                    <input type="password" class="form-control" id="ConfirmSecPass" placeholder="Re Password" size="50"
-                           required>
+                    <input type="password" id="re-password" class="form-control" name="confirmSecPass"
+                           placeholder="Re Password"
+                           size="50" required>
                 </div>
-                <button class="btn btn-primary w-100" type="submit">Register</button>
+                <button class="btn btn-primary w-100 btn-success" type="submit">Register</button>
             </fieldset>
             <a href="login-page.html" class="text-decoration-none">Click here to Login</a>
         </form>
     </div>
 </div>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+<script type="text/javascript">
+    const FORM = document.querySelector('#register')
+
+    FORM.addEventListener('submit', (event) => {
+        event.preventDefault()
+
+        const passwordInput = document.querySelector('#password')
+        const confirmPasswordInput = document.querySelector('#re-password')
+        if (passwordInput.value !== confirmPasswordInput.value) {
+            alert('Passwords do not match')
+            clearPassword()
+            return
+        }
+
+        const userData = {
+            username: document.querySelector('#username').value,
+            email: document.querySelector('#email').value,
+            password: passwordInput.value,
+        }
+        let listUsers = localStorage.getItem('list-users') ? JSON.parse(localStorage.getItem('list-users')) : []
+
+        const userExists = listUsers.some(user => user.email === userData.email || user.username === userData.username)
+        if (userExists) {
+            alert('User already exists');
+            clearForm();
+            return;
+        }
+
+        listUsers.push(userData)
+        localStorage.setItem('list-users', JSON.stringify(listUsers))
+
+        alert('Registration saved successfully!')
+        clearForm()
+
+        window.location.href = 'login-page.html'
+    })
+
+    const clearForm = () => {
+        document.querySelector('#username').value = '';
+        document.querySelector('#email').value = '';
+        document.querySelector('#password').value = '';
+        document.querySelector('#re-password').value = '';
+    }
+
+    const clearPassword = () => {
+        document.querySelector('#password').value = ''
+        document.querySelector('#re-password').value = ''
+    }
+</script>
 </body>
 </html>
